--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Your Name
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/SACsmall.jpg
+avatar: https://github.com/DrLawrenceSAC/TEJ3M-5-GitHubAndDesign/blob/master/images/SACsmall.jpg 
 
 #
 # Flags below are optional
