--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Your Name
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/DrLawrenceSAC/TEJ3M-5-GitHubAndDesign/blob/master/images/SACsmall.jpg 
+avatar: https://raw.githubusercontent.com/DrLawrenceSAC/TEJ3M-5-GitHubAndDesign/master/images/jekyll-logo.png
+### file location: https://github.com/DrLawrenceSAC/TEJ3M-5-GitHubAndDesign/blob/master/images/SACsmall.jpg 
 
 #
 # Flags below are optional
